syntax = "proto3";

package lkdcode.kiwi.v1;

import "config/common.proto";
import "kiwi/request/kiwi_request.proto";

option java_multiple_files = true;
option java_package = "lkdcode.grpc.kiwi.v1";
option java_outer_classname = "KiwiServiceV1Proto";

service KiwiService {
  rpc validate(lkdcode.kiwi.request.KiwiRequest) returns (stream google.protobuf.Empty){}
}